# logbook

./: .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_AUTH.md
.claude/commands/: plan.md  review.md
.cursor/rules/: backend_design.mdc  workout-app.mdc
backend/: .env.example  .env.test  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  Taskfile.yml  atlas.hcl  docker-compose.yml  example_conftest.py  openapi.json  pyproject.toml  railway.json
backend/scripts/: README.md  load_models.py  quick_curl_examples.sh  seed_database.py  test_auth_curl.sh  test_oauth.py
backend/scripts/seeds/: exercises.csv
backend/src/workout_api/: CLAUDE.md  __init__.py  server.py
backend/src/workout_api/auth/: authlib_google.py  dependencies.py  google.py  google_verification.py  jwt.py  router.py  schemas.py  service.py
backend/src/workout_api/core/: config.py  database.py  logging.py  main.py
backend/src/workout_api/exercises/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/workout_api/health/: __init__.py  router.py  schemas.py  service.py
backend/src/workout_api/seeding/: __init__.py  base.py  exercise_seeder.py  seeder_registry.py
backend/src/workout_api/shared/: base_model.py  exceptions.py
backend/src/workout_api/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/workout_api/voice/: __init__.py  deepgram_client.py  dependencies.py  router.py  schemas.py  service.py
backend/src/workout_api/workouts/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_app_simple.py  test_main.py  test_voice_service.py
backend/tests/auth/: conftest.py  test_auth_router.py  test_auth_service.py  test_dev_auth.py  test_google.py  test_jwt.py  test_nextauth_router.py
backend/tests/exercises/: __init__.py  conftest.py  test_exercise_repository.py  test_exercise_router.py  test_exercise_service.py
backend/tests/health/: test_health_endpoints.py
backend/tests/users/: test_transaction_isolation.py  test_user_repository.py  test_user_router.py  test_user_service.py
backend/tests/voice/: test_deepgram_client.py  test_voice_dependencies.py  test_voice_service.py
backend/tests/workouts/: __init__.py  conftest.py  test_basic.py  test_workout_repository.py  test_workout_router.py  test_workout_service.py
docs/: api_proposal.md  backend_design.md  datamodel.md  frontend.md  testing.md
frontend/: .env.example  .env.local.example  .eslintrc.json  .gitignore  CLAUDE.md  jest.config.js  jest.setup.ts  middleware.ts  next.config.mjs  openapi.json  orval.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
frontend/app/: client.tsx  globals.css  icon.tsx  layout.tsx  metadata.ts  page.tsx
frontend/app/ask-ai/: page.tsx
frontend/app/exercises/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/workout/: page.tsx
frontend/app/workout/[id]/: page.tsx
frontend/components/: api-health-check.tsx  app-shell.tsx  dashboard-screen.tsx  error-boundary.tsx  exercise-selector.tsx  login-screen.tsx  set-input.tsx  workout-interface.tsx
frontend/components/layout/: bottom-nav.tsx  mobile-layout.tsx
frontend/components/modals/: add-exercise-modal.tsx  add-set-modal.tsx  edit-set-modal.tsx  select-exercise-modal.test.tsx  select-exercise-modal.tsx  voice-note-modal.tsx
frontend/components/screens/: active-workout-screen.test.tsx  active-workout-screen.tsx  login-screen.tsx  workouts-list-screen.integration.test.tsx  workouts-list-screen.test.tsx  workouts-list-screen.tsx
frontend/components/ui/: modal.tsx  select.tsx
frontend/lib/: auth.test.ts  auth.ts  cache-tags.ts  config.ts  logger.ts  react-query.tsx  test-factories.ts  test-utils.ts  utils.test.ts
frontend/lib/api/: generated.ts  mutator.ts
frontend/lib/api/model/: authErrorResponse.ts  authErrorResponseErrorCode.ts  authTokenRequest.ts  authTokenResponse.ts  authenticationResponse.ts  bodyTranscribeAudioApiV1VoiceTranscribePost.ts  databaseHealthResponse.ts  databaseHealthResponseDatabase.ts  databaseHealthResponseError.ts  databaseHealthResponsePoolInfo.ts  databaseHealthResponsePoolInfoAnyOf.ts  databaseHealthResponseResponseTimeMs.ts  databaseHealthResponseStatus.ts  devLoginRequest.ts  devLoginResponse.ts  exerciseCreate.ts  exerciseCreatePictureUrl.ts  exerciseExecutionRequest.ts  exerciseExecutionRequestNoteText.ts  exerciseExecutionResponse.ts  exerciseExecutionResponseNoteText.ts  exerciseExecutionUpdate.ts  exerciseExecutionUpdateExerciseOrder.ts  exerciseExecutionUpdateNoteText.ts  exerciseModality.ts  exerciseReorderRequest.ts  exerciseReorderResponse.ts  exerciseResponse.ts  exerciseResponseCreatedByUserId.ts  exerciseResponsePictureUrl.ts  exerciseResponseUpdatedByUserId.ts  exerciseStats.ts  exerciseUpdate.ts  exerciseUpdateBodyPart.ts  exerciseUpdateModality.ts  exerciseUpdateName.ts  exerciseUpdatePictureUrl.ts  fullHealthResponse.ts  getExercisesByBodyPartApiV1ExercisesByBodyPartBodyPartGetParams.ts  getExercisesByModalityApiV1ExercisesByModalityModalityGetParams.ts  (+71 more)
frontend/lib/contexts/: auth-context.tsx  workout-context.tsx
frontend/lib/hooks/: use-fuzzy-exercise-search.ts  use-optimistic-mutation.test.ts  use-optimistic-mutation.ts  use-tagged-queries.ts  use-visual-viewport.test.ts  use-visual-viewport.ts  useAuthErrorHandler.ts
frontend/lib/search/: exercise-data-cache.ts  fuzzy-search-service.test.ts  fuzzy-search-service.ts
frontend/lib/stores/: ui-store.ts  workout-store.test.ts  workout-store.ts
frontend/lib/utils/: optimistic.ts
frontend/types/: next-auth.d.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+1 files in other folders)
